--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>gbalev GitHub Pages Site</title>
     <style>
-        body { font-family: Arial; text-align: center; padding: 50px; }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body { 
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            line-height: 1.6; 
+            color: #333;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        header { text-align: center; padding: 50px 0; }
+        h1 { color: #2ea44f; margin-bottom: 20px; }
+        .container { padding: 20px; }
+        .steps { background: #f6f8fa; padding: 20px; border-radius: 10px; margin: 20px 0; }
+        code { background: #f1f1f1; padding: 2px 5px; border-radius: 3px; }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Site!</h1>
-    <p>Hosted with GitHub Pages</p>
+    <header>
+        <h1>🚀 Successfully Deployed!</h1>
+        <p>Your GitHub Pages site is live</p>
+    </header>
+    <div class="container">
+        <p>Your site URL: <code>https://gbalev.github.io</code></p>
+        <div class="steps">
+            <h3>Next Steps:</h3>
+            <ol>
+                <li>Edit <code>index.html</code> to customize</li>
+                <li>Add CSS in <code>style.css</code></li>
+                <li>Commit changes: <code>git commit -am "Update"</code></li>
+                <li>Push: <code>git push</code></li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
