--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Gallery from GitHub Repository</title>
+    <title>Balev - Image Gallery from GitHub </title>
     <style>
         * {
             margin: 0;
