--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>📷 GitHub Image Gallery</h1>
+            <h1>📷 Balev Image Gallery</h1>
             <p class="subtitle">Display images from any public GitHub repository</p>
         </header>
 
